--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "run-s build:*",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p dev:*",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
+    "build": "remix build",
+    "deploy": "fly deploy --remote-only",
+    "dev": "remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -28,7 +24,6 @@
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.11.0",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.5"
   },
   "engines": {
